--- a/hello/index.css
+++ b/hello/index.css
@@ -3,5 +3,5 @@ a{color:rgb(240, 132, 70);font-size:24pt}
 .button {
     width: 100px;
     height:50px;
-    color:aquamarine;
+    color:rgb(66, 16, 49);
   }
