--- a/hello/index.css
+++ b/hello/index.css
@@ -1,7 +1,11 @@
-a{color:rgb(240, 132, 70);font-size:24pt}
-
 .button {
     width: 100px;
     height:50px;
     color:rgb(66, 16, 49);
   }
+
+
+.i {
+    margin-left: 3em;
+    margin-right: 3em;
+}
