--- a/hello/index.css
+++ b/hello/index.css
@@ -1,7 +1,10 @@
 .button {
-    width: 100px;
-    height:50px;
+    width: 200px;
+    height:100px;
     background-color:rgb(183, 250, 199);
+    border-radius: 10px;
+    border: 3px solid black;
+    font-size: 15pt;
   }
 
 
