--- a/hello/index.css
+++ b/hello/index.css
@@ -1,11 +1,29 @@
-.button {
+.greenbutton {
     width: 200px;
     height:100px;
     background-color:rgb(183, 250, 199);
     border-radius: 10px;
     border: 3px solid black;
     font-size: 15pt;
-  }
+}
+
+.pinkbutton {
+    width: 200px;
+    height:100px;
+    background-color:rgb(250, 183, 204);
+    border-radius: 10px;
+    border: 3px solid black;
+    font-size: 15pt;
+}
+
+.bluebutton {
+    width: 200px;
+    height:100px;
+    background-color:rgb(185, 183, 250);
+    border-radius: 10px;
+    border: 3px solid black;
+    font-size: 15pt;
+}
 
 
 .i {
@@ -24,8 +42,4 @@
 
 .a {
   background-color: pink;
-}
-
-.html {
-  line-height: 30px;
 }
