--- a/hello/index.css
+++ b/hello/index.css
@@ -8,8 +8,8 @@
 }
 
 .pinkbutton {
-    width: 200px;
-    height:100px;
+    width: 100px;
+    height:50px;
     background-color:rgb(250, 183, 204);
     border-radius: 10px;
     border: 3px solid black;
@@ -17,12 +17,21 @@
 }
 
 .bluebutton {
-    width: 200px;
-    height:100px;
+    width: 100px;
+    height:50px;
     background-color:rgb(185, 183, 250);
     border-radius: 10px;
     border: 3px solid black;
     font-size: 15pt;
+}
+
+.yellowbutton {
+  width: 100px;
+  height:50px;
+  background-color:rgb(250, 247, 183);
+  border-radius: 10px;
+  border: 3px solid black;
+  font-size: 15pt;
 }
 
 
