--- a/hello/index.css
+++ b/hello/index.css
@@ -34,6 +34,19 @@
   font-size: 15pt;
 }
 
+.purplebutton {
+  width: 100px;
+  height:50px;
+  background-color:rgb(206, 174, 243);
+  border-radius: 10px;
+  border: 3px solid black;
+  font-size: 15pt;
+}
+
+.textarea {
+  border: 3px solid black;
+  background-color: rgb(204, 247, 225);
+}
 
 .i {
     margin-left: 3em;
