--- a/hello/index.css
+++ b/hello/index.css
@@ -46,12 +46,13 @@
 .textarea {
   border: 3px solid black;
   background-color: rgb(204, 247, 225);
-  font-size: 10pt;
+  font-size: 15pt;
 }
 
 .i {
     margin-left: 3em;
     margin-right: 3em;
+    background-color: rgb(244, 212, 243);
 }
 
 .header {
