--- a/hello/index.css
+++ b/hello/index.css
@@ -44,8 +44,9 @@
 }
 
 .textarea {
-  border: 3px solid black;
   background-color: rgb(204, 247, 225);
+  border-radius: 10px;
+  border: 3px solid black;
   font-size: 15pt;
 }
 
