--- a/hello/index.css
+++ b/hello/index.css
@@ -57,9 +57,12 @@
 }
 
 .m {
+    margin-top: 1em;
+    margin-bottom: 1em;
     margin-left: 2em;
     margin-right: 20em;
     background-color: rgb(244, 212, 243);
+    border-radius: 5px;
 }
 
 .header { 
