--- a/hello/index.css
+++ b/hello/index.css
@@ -50,6 +50,12 @@
   font-size: 12.5pt;
 }
 
+.title {
+  border-radius: 10px;
+  border: 3px solid black;
+  font-size: 12.5pt;
+}
+
 .i {
     margin-left: 3em;
     margin-right: 3em;
@@ -63,6 +69,15 @@
     margin-right: 16em;
     background-color: rgb(244, 212, 243);
     border-radius: 5px;
+}
+
+.t {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 2em;
+  margin-right: 16em;
+  background-color: rgb(212, 239, 244);
+  border-radius: 5px;
 }
 
 .header { 
