--- a/hello/index.css
+++ b/hello/index.css
@@ -1,7 +1,7 @@
 .greenbutton {
     width: 1200px;
     height:100px;
-    background-color:rgb(196, 248, 208);
+    background-color:rgb(209, 249, 219);
     border-radius: 10px;
     border: 3px solid black;
     font-size: 15pt;
@@ -70,8 +70,6 @@
 }
 
 .t {
-  margin-top: 1em;
-  margin-bottom: 1em;
   margin-left: 2em;
   margin-right: 16em;
   background-color: rgb(212, 239, 244);
@@ -88,5 +86,5 @@
 }
 
 .a {
-  background-color: pink;
+  background:linear-gradient(90deg, rgb(255, 178, 191), rgb(255, 222, 227));
 }
