--- a/hello/index.css
+++ b/hello/index.css
@@ -130,7 +130,7 @@
   background:linear-gradient(90deg, rgb(100, 149, 237), rgb(201, 213, 228));
 }
 
-.body {
+.html {
   background-color: rgb(212, 195, 230);
 }
 
