--- a/hello/index.css
+++ b/hello/index.css
@@ -130,10 +130,14 @@
   background:linear-gradient(90deg, rgb(100, 149, 237), rgb(201, 213, 228));
 }
 
-.html {
+.body {
   background-color: rgb(212, 195, 230);
 }
 
 .a {
   background:linear-gradient(90deg, rgb(255, 178, 191), rgb(255, 222, 227));
+}
+
+.b {
+  background-color: pink;
 }
