--- a/hello/index.css
+++ b/hello/index.css
@@ -89,6 +89,8 @@
 }
 
 .textarea {
+  width:1000px;
+  height:500px;
   background-color: rgb(204, 247, 225);
   border-radius: 10px;
   border: 3px solid black;
@@ -96,6 +98,7 @@
 }
 
 .title {
+  width: 1000px;
   border-radius: 5px;
   border: 2px solid black;
   font-size: 12.5pt;
