--- a/hello/index.css
+++ b/hello/index.css
@@ -5,6 +5,7 @@
     border-radius: 10px;
     border: 3px solid black;
     font-size: 20pt;
+    font-weight: bold;
 }
 
 .greenbutton:active {
@@ -14,6 +15,7 @@
   border-radius: 10px;
   border: 3px solid black;
   font-size: 20pt;
+  font-weight: bold;
 }
 
 .pinkbutton {
