--- a/hello/index.css
+++ b/hello/index.css
@@ -1,7 +1,7 @@
 .greenbutton {
     width: 800px;
     height:150px;
-    background-color:rgb(209, 249, 219);
+    background-color:rgb(215, 254, 225);
     border-radius: 10px;
     border: 3px solid black;
     font-size: 20pt;
@@ -97,6 +97,7 @@
   border-radius: 10px;
   border: 3px solid black;
   font-size: 12.5pt;
+  line-height: 150%;
 }
 
 .title {
@@ -135,8 +136,8 @@
   background:linear-gradient(90deg, rgb(100, 149, 237), rgb(201, 213, 228));
 }
 
-.body {
-  background-color: rgb(212, 195, 230);
+body {
+  background-color: rgb(227, 214, 240);
 }
 
 .a {
