--- a/hello/index.css
+++ b/hello/index.css
@@ -91,7 +91,8 @@
 }
 
 .textarea {
-  width:1000px;
+  margin-left: 2em;
+  margin-right: 16em;
   height:500px;
   background-color: rgb(204, 247, 225);
   border-radius: 10px;
@@ -101,7 +102,8 @@
 }
 
 .title {
-  width: 1000px;
+  margin-left: 2em;
+  margin-right: 16em;
   border-radius: 5px;
   border: 2px solid black;
   font-size: 12.5pt;
