--- a/hello/index.css
+++ b/hello/index.css
@@ -91,9 +91,9 @@
 }
 
 .textarea {
+  width: 1000px;
+  height: 500px;
   margin-left: 2em;
-  margin-right: 2em;
-  height:500px;
   background-color: rgb(204, 247, 225);
   border-radius: 10px;
   border: 3px solid black;
@@ -102,8 +102,8 @@
 }
 
 .title {
+  width: 1000px;
   margin-left: 2em;
-  margin-right: 2em;
   border-radius: 5px;
   border: 2px solid black;
   font-size: 12.5pt;
